--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Sher Sheikh" />
   <meta property="og:title" content="Sher Sheikh - Portfolio" />
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/sher-s7/portfolio/master/assets/sher-sheikh.png" />
+    content="https://raw.githubusercontent.com/sher-s7/portfolio-v2/master/src/assets/site_preview.png?token=GHSAT0AAAAAABYTYU7O2DJ6NPTQCCCGY6S2YZQX6EA" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Sher Sheikh - Portfolio</title>
